--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,9 @@
 body {
-  margin: 0;
-  padding: 0;
-  background: "img/login.png";
-  background-size: cover;
-  background-position: center;
-  font-family: sans-serif;
+background-image: linear-gradient(to right, #c02425, #f0cb35);
+width: 1920px;
+height: 1080px;
 }
-
+  
 .loginbox{
   width: 320px;
   height: 420px;
@@ -58,14 +55,21 @@ h1{
   font-size: 16px;
 }
 
-.loginbox input[type="button"]{
-  border:none;
-  outline: none;
-  height: 40px;
-  background: #fb2525;
-  color: #fff;
-  font-size: 18px;
-  border-radius: 20px;
+.button {
+  background-color:#4eb56a;
+	border-radius:42px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	font-weight:bold;
+	padding:13px 63px;
+	text-decoration:none;
+	text-shadow:0px 0px 0px #2f6627;
+  margin: 0px 73px 0px 81px;
+  padding: 3px 10px;
 }
 
 .loginbox a{
@@ -77,4 +81,14 @@ h1{
 
 .loginbox a:hover {
   color: #ffc107;
+}
+href{
+margin:2px 18px 2px 8px;
+padding: 0px 20px 0px 0px;
+color: hsl(0, 0%, 66%);
+display: inline;
+font-size: 12px;
+gap: normal;
+line-height: 20px;
+text-align: left;
 }
