--- a/css/styles.css
+++ b/css/styles.css
@@ -139,3 +139,34 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
+
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-around;
+  width: 156px;
+  height: 40px;
+}
+  /* Hide Radio Button /
+  .rating:not(:checked) > input {
+      display: none;
+  }
+  / Empty Star /
+  .rating:not(:checked) > label {
+      width: 1em;
+      overflow: hidden;
+      white-space: nowrap;
+      cursor: pointer;
+      font-size: 30px;
+      color: #6e6e6e; /#ccc;/
+  }
+  / - Selected Stars - /
+      .rating:not(:checked) > label:hover,
+      .rating:not(:checked) > label:hover ~ label {
+          color: #ffff64;
+      }
+  / - Filled Star - */
+  .rating input:checked ~ label {
+      color: #ffff19;
+  }
